--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,32 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600,700');
+
+body {
+  font-size: 62.5%;
+  font-family: 'Work Sans', sans-serif;
+  line-height: 1rem;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.img_logo {
+  width:2rem;
+  border-radius: 50%;
+  margin-left:0.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.comment {
+  display:flex;
 }
 
-.App-link {
-  color: #61dafb;
+a {
+  color:inherit;
+  text-decoration:none;
+  font-weight:bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover {
+  color:inherit;
+  text-decoration:none;
+}
+
+div .comment p {
+  word-wrap: break-word;
 }
