--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,15 @@ div .comment p {
   background-color: transparent;
   font-size: 0.7rem;
   font-family: inherit;
+  color: blue;
 }
 
 div .media-object input {
   border: none;
+  outline: none;
+  width:100%;
 }
 
 div .media-object input:focus {
-  border-style: none;
+  outline: none;
 }
